Initial commit: Rasa chatbot + RAG engine + dashboard + evaluation

--- a/config.yml
+++ b/config.yml
@@ -8,7 +8,7 @@ assistant_id: 20251118-173014-extremal-course
 
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: en
+language: es
 
 pipeline: null
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
