--- a/domain.yml
+++ b/domain.yml
@@ -1,8 +1,8 @@
 version: "3.1"
 
 session_config:
-  session_expiration_time: 60
-  carry_over_slots_to_new_session: true
+  session_expiration_time: 10
+  carry_over_slots_to_new_session: false
 
 intents:
   - saludo
@@ -11,10 +11,13 @@ intents:
   - afirmacion
   - negacion
   - ayuda
-  - enviar_carnet       # cuando el usuario envíe la foto del carnet
-  - describir_problema  # cuando describa el problema después de elegir categoría
-  - reportar_incidente  # lo usaremos para activar el flujo de incidente
+  - enviar_carnet       
+  - describir_problema  
+  - reportar_incidente  
   - fuera_de_alcance
+  - ver_mas_pasos
+  - levantar_reporte
+  - incidente_solucionado
 
 entities: []
 
@@ -24,7 +27,7 @@ slots:
     initial_value: false
     influence_conversation: true
     mappings:
-      - type: custom   # lo setearemos desde una acción personalizada
+      - type: custom 
 
   employee_code:
     type: text
@@ -43,6 +46,12 @@ slots:
     influence_conversation: true
     mappings:
       - type: custom
+
+  branch_name:
+    type: text
+    influence_conversation: true
+    mappings:
+      - type: custom 
 
   categoria:
     type: text
@@ -77,6 +86,53 @@ slots:
     mappings:
       - type: custom
 
+  rag_doc_path:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+  
+  rag_doc_title:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+ 
+  kb_steps:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+
+  kb_steps_index:
+    type: float
+    influence_conversation: false
+    initial_value: 0
+    mappings:
+      - type: custom
+
+  kb_steps_round:
+    type: float
+    influence_conversation: false
+    initial_value: 0
+    mappings:
+      - type: custom
+
+  rag_session_id:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+  
+  flujo_otros_llm:
+    type: bool
+    influence_conversation: false
+    initial_value: false
+    mappings:
+      - type: custom
+
+
+
 forms:
   incidente_form:
     required_slots:
@@ -86,7 +142,7 @@ forms:
 
 responses:
 
-  # --- Flujo de autenticación por carnet ---
+  
   utter_pedir_carnet:
     - text: "Hola 👋, soy el asistente de Soporte Técnico. Para continuar necesito validar tu identidad. Por favor, envíame una foto de tu carnet corporativo."
 
@@ -120,8 +176,7 @@ responses:
           payload: "software"
         - title: "Otros"
           payload: "otro"
-
-  # Ejemplo para subcategorías de periféricos (luego podemos añadir más por categoría)
+  
   utter_ask_subcategoria:
     - text: "¿Qué dispositivo está presentando el problema?"
       buttons:
@@ -142,18 +197,9 @@ responses:
         - title: "No aplica / Otro"
           payload: "no_aplica"
 
-  # --- Descripción del problema ---
+  
   utter_ask_descripcion:
     - text: "Descríbeme brevemente qué está ocurriendo, por favor."
-
-  # --- Preguntar si se solucionó ---
-  utter_preguntar_si_se_soluciono:
-    - text: "¿El problema se solucionó con los pasos anteriores?"
-      buttons:
-        - title: "Sí, ya se solucionó ✅"
-          payload: "/afirmacion"
-        - title: "No, sigue el problema ❌"
-          payload: "/negacion"
 
   utter_despedida_incidente_resuelto:
     - text: "Perfecto, me alegra que se haya solucionado 🙌. Si necesitas algo más, vuelve a escribirme."
@@ -161,7 +207,6 @@ responses:
   utter_ticket_creado:
     - text: "He generado el ticket {ticket_id} con la información de tu incidente. Un técnico dará seguimiento lo antes posible."
 
-  # --- Respuestas generales que ya usabas ---
   utter_saludo:
     - text: "Hola 👋, soy el asistente de Soporte Técnico."
 
@@ -184,17 +229,28 @@ responses:
           payload: "/afirmacion"
         - title: "No, gracias"
           payload: "/negacion"
+          
+  utter_preguntar_si_se_soluciono:
+    - text: "¿Pudiste solucionar el problema con los pasos anteriores?"
+      buttons:
+        - title: "Sí, ya se solucionó ✅"
+          payload: "/afirmacion"
+        - title: "No, sigue el problema ❌"
+          payload: "/negacion"
 
-  utter_despedida_final:
-    - text: "¡Perfecto! Si necesitas algo más, estaré aquí para ayudarte. 👋"
+  utter_session_start:
+    - text: "👋 Tu sesión anterior había expirado por inactividad. Empecemos de nuevo, ¿en qué puedo ayudarte?"
 
 actions:
   - action_hello_world
   - action_confirmar_reporte
-  # Más adelante agregaremos:
   - action_verificar_identidad
   # - action_proponer_solucion_incidente
   # - action_crear_ticket
   - validate_incidente_form
   - action_reset_incidente
   - action_start_nuevo_incidente
+  - action_end_conversation
+  - action_sugerir_solucion_incidente
+  - action_mostrar_mas_pasos_rag
+  
